cabal-version:       2.2
name:                dingas
version:             0.1.0.0
synopsis:            Dingas
description:         Dingas
homepage:            https://github.com/traviswhitaker/miso-toys
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2019
category:            Web
extra-source-files:  CHANGELOG.md

executable dingas
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  if !impl(ghcjs)
    buildable: False
  else
    ghcjs-options:       -dedupe -O2
    build-depends:       base ^>=4.12.0.0
                       , miso
    hs-source-dirs:      src
    default-language:    Haskell2010
